welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
	if (d<20 && d>12) { compteur = compteur + 1 }
                                     ^countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
	if (d<20 && d>12) { compteur = compteur + 1 }
        ^