welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var compteur:Int = 0
	if (a<20 && a>12) { compteur = compteur + 1 }
	if (b<20 && b>12) { compteur = compteur + 1 }
	if (c<20 && c>12) { compteur = compteur + 1 }
	if (d<20 && d>12) { compteur = compteur + 1 }
	
}

